samples/_failures_safe/1761276123_dca16c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d3f06fb.c: In function ‘main’:
./samples/SAFE/__tmp_1d3f06fb.c:174:9: error: expected expression at end of input
  174 |         size_t len =
      |         ^~~~~~
./samples/SAFE/__tmp_1d3f06fb.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d3f06fb.c:174:9: error: expected declaration or statement at end of input
